# valefor

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .bumpversion.cfg  .gitignore  .isort.cfg  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  config.yaml  pyproject.toml  pytest.ini  tox.ini
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/app/: __init__.py  jwt_handlers.py  models.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/app/config/: __init__.py  base.py  database.py  jwt.py  provider.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/user/: models.py
